welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: Int does not take parameters
  for (k <- 1 to num.length()) {
                           ^